--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ electorate-overlap/
 google-political-ads-transparency-bundle/
 google-political-ads-transparency-bundle.zip
 adfiles/
+scraperwiki.sqlite
