--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ electorate-overlap/
 google-political-ads-transparency-bundle/
 google-political-ads-transparency-bundle.zip
 adfiles/
-scraperwiki.sqlite
+*.sqlite
 .DS_Store
 aus-google-ad-data.*
+analysis/
+adimages/
