--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ electorate-overlap/
 google-political-ads-transparency-bundle/
 google-political-ads-transparency-bundle.zip
 adfiles/
-*.sqlite
+# *.sqlite
 .DS_Store
 aus-google-ad-data.*
 analysis/
