--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ pytesseract = "*"
 pillow = "*"
 youtube-transcript-api = "*"
 sqlalchemy = "==1.4.4"
+selenium = "*"
+lxml = "*"
 
 [dev-packages]
 
